# ma-terrasse-au-soleil

./: .env.example  .gitignore  Makefile  VISION.md  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mcp.json
backend/: Dockerfile  alembic.ini  mcp_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_price_level.py  003_add_google_place_details.py  004_add_nom_commercial.py  005_add_osm_sirene_fields.py  006_widen_phone_column.py  007_widen_typologie_add_categorie.py
backend/app/: config.py  database.py  dependencies.py  i18n.py  main.py
backend/app/models/: __init__.py  batiment.py  horizon_profile.py  meteo_cache.py  terrasse.py
backend/app/repositories/: terrasse.py
backend/app/routers/: contact.py  geocode.py  og.py  poster.py  seo.py  streetview.py  terrasses.py
backend/app/schemas/: geocode.py  nearby.py  terrasse.py  timeline.py
backend/app/services/: geocode.py  google_places.py  horizon_cache.py  meteo.py  nearby.py  osm.py  poster.py  shadow.py  sirene.py  sun.py  timeline.py
backend/tests/: conftest.py  test_api_contact.py  test_api_geocode.py  test_api_terrasses.py  test_nearby.py  test_shadow.py  test_sun.py  test_timeline.py
data/: DEPLOY_ENRICHMENT.md  backfill_nom_commercial.py  blog_stats_queries.sql  classify.py  compute_horizon_profiles.py  compute_sun_stats.py  download_bdtopo.sh  download_terrasses.sh  enrich_osm_sirene.py  enrich_price_levels.py  export_blog_stats.py  import_batiments.py  import_terrasses.py  top_sunshine.py  update_pipeline.py  validate_data.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
infra/: init-db.sql
scripts/: cron_scheduler.sh  (+1 more)
(+95 files in other folders)
