[project]
name = "terrasse-soleil-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pysolar>=0.11",
    "numpy>=1.26",
    "shapely>=2.0",
    "aiosmtplib>=3.0",
    "matplotlib>=3.8",
    "qrcode[pil]>=7.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]
data = [
    "geopandas>=1.0",
    "pyproj>=3.6",
    "psycopg2-binary>=2.9",
    "rapidfuzz>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
